--- a/misc/pinfo/Makefile
+++ b/misc/pinfo/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2001/03/25 23:47:10 fredb Exp $
+# $NetBSD: Makefile,v 1.3 2001/03/26 00:28:11 fredb Exp $
 #
 
 DISTNAME=		pinfo-0.6.0
+PKGNAME=		pinfo-0.6.0nb1
 CATEGORIES=		misc
 MASTER_SITES=		http://zeus.polsl.gliwice.pl/~pborys/stable-version/
 
