--- a/misc/pinfo/Makefile
+++ b/misc/pinfo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2001/03/26 00:28:11 fredb Exp $
+# $NetBSD: Makefile,v 1.4 2001/03/26 00:41:59 fredb Exp $
 #
 
 DISTNAME=		pinfo-0.6.0
@@ -11,16 +11,23 @@ HOMEPAGE=		http://zeus.polsl.gliwice.pl/~pborys/
 COMMENT=		Przemek's Info Viewer
 
 BUILD_DEPENDS+=		msgfmt:../../devel/gettext
-DEPENDS+=		ncurses>=5.0:../../devel/ncurses
 
 GNU_CONFIGURE=		yes
 USE_LIBINTL=		yes
 
 CPPFLAGS+=		-DDFLT_INFOPATH='\"/usr/share/info:${X11BASE}/info:${LOCALBASE}/info:/usr/local/info\"'
-CONFIGURE_ARGS+=	--with-ncurses=${LOCALBASE}
 CONFIGURE_ENV+=		CPPFLAGS="${CPPFLAGS}"
 
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/src/pinforc ${PREFIX}/share/examples/
+
+.include "../../mk/bsd.prefs.mk"
+
+.if defined(PINFO_USE_NATIVE_CURSES) && ${PINFO_USE_NATIVE_CURSES} == "YES"
+CONFIGURE_ARGS+=	--with-vcurses
+.else
+DEPENDS+=		ncurses>=5.0:../../devel/ncurses
+CONFIGURE_ARGS+=	--with-ncurses=${LOCALBASE}
+.endif
 
 .include "../../mk/bsd.pkg.mk"
