--- a/mk/mk.conf.example
+++ b/mk/mk.conf.example
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf.example,v 1.189 2001/03/25 11:42:55 wennmach Exp $
+# $NetBSD: mk.conf.example,v 1.190 2001/03/26 00:43:34 fredb Exp $
 #
 
 # Sample /etc/mk.conf file, which can be used to set specific values
@@ -659,6 +659,12 @@ PAPERSIZE=	A4
 # Compile code into pine to use a LDAP server for an address book. 
 # Possible: undefined, YES
 # Defailt: undefined (support not compiled in)
+
+#PINFO_USE_NATIVE_CURSES=
+# Used in pinfo to use NetBSD native curses, rather than ncurses.
+# Only works on NetBSD-1.5 and newer.
+# Possible: YES, not defined
+# Default: not defined
 
 #POPTOP_USE_MPPE=
 # Used in poptop package to specify the use of the mppe-ppp package
