--- a/mk/mk.conf.example
+++ b/mk/mk.conf.example
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf.example,v 1.190 2001/03/26 00:43:34 fredb Exp $
+# $NetBSD: mk.conf.example,v 1.191 2001/03/26 00:45:05 fredb Exp $
 #
 
 # Sample /etc/mk.conf file, which can be used to set specific values
@@ -549,7 +549,7 @@
 # Default: YES 
 
 #LYNX_SCREEN_LIB=	slang
-# Used in lynx-current to set which "screen" library to use.
+# Used in lynx and lynx-current to set which screen library to use.
 # Possible: slang, ncurses, curses.
 # Default: slang
 
