--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.93 2001/03/23 20:20:32 fredb Exp $
+# $NetBSD: Makefile,v 1.94 2001/03/26 04:14:22 zuntum Exp $
 #
 
 COMMENT=	Miscellaneous utilities
@@ -12,6 +12,7 @@ SUBDIR+=	buffer
 SUBDIR+=	chipmunk
 SUBDIR+=	chord
 SUBDIR+=	cksfv
+SUBDIR+=	colorize
 SUBDIR+=	colorls
 SUBDIR+=	colortail
 SUBDIR+=	cowsay
