--- a/databases/mysql-client/Makefile
+++ b/databases/mysql-client/Makefile
@@ -1,19 +1,15 @@
-# $NetBSD: Makefile,v 1.12 2001/02/16 14:17:28 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2001/03/26 13:26:42 bad Exp $
 #
 
-DISTNAME=	mysql-3.22.32
+DISTNAME=	mysql-3.23.35
 PKGNAME=	${DISTNAME:S/-/-client-/}
 CATEGORIES=	databases
-MASTER_SITES=	ftp://ftp.mysql.com/MySQL-3.22/ \
-		ftp://ftp.sunet.se/pub/unix/databases/relational/mysql/Downloads/MySQL-3.22/
+MASTER_SITES=	ftp://ftp.mysql.com/MySQL-3.23/ \
+		ftp://ftp.sunet.se/pub/unix/databases/relational/mysql/Downloads/MySQL-3.23/
 
 MAINTAINER=	packages@netbsd.org
 HOMEPAGE=	http://www.mysql.com/
 COMMENT=	MySQL, a free SQL database (client)
-
-RESTRICTED=		"Restrictive license."
-NO_SRC_ON_CDROM=	${RESTRICTED}
-NO_BIN_ON_CDROM=	${RESTRICTED}
 
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS+=--without-perl --without-debug --without-bench \
@@ -27,6 +23,7 @@ CFLAGS+=	-Dunix
 
 USE_PERL5=	yes
 USE_LIBTOOL=	yes
+LTCONFIG_OVERRIDE= ${WRKSRC}/ltconfig
 
 INFO_FILES=	mysql.info
 
