--- a/databases/xmysql/Makefile
+++ b/databases/xmysql/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2001/02/16 14:17:43 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2001/03/26 14:54:20 bad Exp $
 #
 
 DISTNAME=	xmysql-1.10
@@ -9,7 +9,7 @@ MAINTAINER=	bad@netbsd.org
 HOMEPAGE=	http://web.wt.net/~dblhack
 COMMENT=	Graphical front end to the MySQL database engine
 
-DEPENDS=	mysql-client-3.22.32:../../databases/mysql-client
+DEPENDS=	mysql-client>=3.23.35:../../databases/mysql-client
 DEPENDS+=	xforms>=0.88nb1:../../x11/xforms
 
 MAKE_ENV+=	X11PREFIX=${X11PREFIX}
