--- a/www/php4-mysql/Makefile
+++ b/www/php4-mysql/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2001/03/01 18:18:16 jlam Exp $
+# $NetBSD: Makefile,v 1.5 2001/03/26 14:54:20 bad Exp $
 
 .include "../../www/php4/Makefile.module"
 
@@ -8,7 +8,7 @@ PHP_PKG_VERS=		nb1
 
 COMMENT=		PHP4 extension for MySQL databases
 
-DEPENDS+=		mysql-client>=3.22:../../databases/mysql-client
+DEPENDS+=		mysql-client>=3.23.35:../../databases/mysql-client
 
 EVAL_PREFIX+=		MYSQLDIR=mysql-client
 CONFIGURE_ARGS+=	--with-${MODNAME}=shared,${MYSQLDIR}
