--- a/net/djbdns/Makefile
+++ b/net/djbdns/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2001/03/16 20:53:04 zuntum Exp $
+# $NetBSD: Makefile,v 1.13 2001/03/26 17:56:09 zuntum Exp $
 # FreeBSD Id: ports/net/djbdns/Makefile,v 1.4 2000/09/28 18:18:41 nbm Exp
 
 DISTNAME=	djbdns-1.05
@@ -25,7 +25,7 @@ RESTRICTED=	"Redistribution of modified package is forbidden"
 NO_BIN_ON_CDROM=${RESTRICTED}
 NO_BIN_ON_FTP=	${RESTRICTED}
 
-EXTRACT_ONLY=	${DISTNAME}.tar.gz \
+EXTRACT_ONLY=	${DISTNAME}${EXTRACT_SUFX}				\
 		${DISTNAME}-man.tar.gz
 
 ALL_TARGET=	it
@@ -38,9 +38,9 @@ post-extract:
 		${DISTDIR}/dnscache-log.pl.txt > ${WRKDIR}/dnscache-log.pl
 
 post-patch:
-	${ECHO} "${CC} ${CFLAGS}" > ${WRKSRC}/conf-cc
-	${ECHO} "${CC} -s" > ${WRKSRC}/conf-ld
-	${ECHO} "${PREFIX}" > ${WRKSRC}/conf-home
+	${ECHO} ${CC} ${CFLAGS} > ${WRKSRC}/conf-cc
+	${ECHO} ${CC} ${STRIPFLAG} > ${WRKSRC}/conf-ld
+	${ECHO} ${PREFIX} > ${WRKSRC}/conf-home
 
 .for i in dnscache axfrdns pickdns rbldns tinydns walldns
 	${SED} "s|usage: $i-conf acct logacct /$i|usage: $i-conf acct logacct ${PREFIX}/etc/$i|g" \
