--- a/databases/db3/Makefile
+++ b/databases/db3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2001/02/21 15:56:01 fvdl Exp $
+# $NetBSD: Makefile,v 1.6 2001/03/26 19:31:55 skrll Exp $
 
 DISTNAME=	db-3.2.9
 PKGNAME=	db3-2.9
@@ -9,16 +9,16 @@ MAINTAINER=	wrstuden@netbsd.org
 HOMEPAGE=	http://www.sleepycat.com/
 COMMENT=	Sleepycat Software's Berkeley DB version 3
 
-#USE_LIBTOOL=		yes
-#LTCONFIG_OVERRIDE=	${WRKDIR}/${DISTNAME}/dist/ltconfig
+USE_LIBTOOL=		yes
+LTCONFIG_OVERRIDE=	${WRKDIR}/${DISTNAME}/dist/ltconfig
 GNU_CONFIGURE=		yes
 CONFIGURE_SCRIPT=	../dist/configure
 
-CONFIGURE_ARGS+= --program-transform-name=s,db_,db3_,
-CONFIGURE_ARGS+= --enable-cxx
-#CONFIGURE_ARGS+=	--enable-shared
+CONFIGURE_ARGS+=	--program-transform-name=s,db_,db3_,
+CONFIGURE_ARGS+=	--enable-cxx
+CONFIGURE_ARGS+=	--enable-shared
 
-WRKSRC=		${WRKDIR}/${DISTNAME}/build_unix
+WRKSRC=			${WRKDIR}/${DISTNAME}/build_unix
 
 post-install:
 	${CHOWN} -R ${BINOWN}:${BINGRP} ${PREFIX}/share/doc/db3
