--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.122 2001/03/25 05:23:25 mjl Exp $
+# $NetBSD: Makefile,v 1.123 2001/03/26 23:27:22 mjl Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -66,6 +66,7 @@ SUBDIR+=	ns-remote
 SUBDIR+=	opera
 SUBDIR+=	p5-Apache-ASP
 SUBDIR+=	p5-Apache-ePerl
+SUBDIR+=	p5-Apache-Session
 SUBDIR+=	p5-CGI
 SUBDIR+=	p5-CGI-Application
 SUBDIR+=	p5-CGI_Lite
