--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.188 2001/03/25 06:55:50 mjl Exp $
+# $NetBSD: Makefile,v 1.189 2001/03/26 23:52:17 mjl Exp $
 #
 
 COMMENT=	Development utilities
@@ -140,6 +140,7 @@ SUBDIR+=	p5-Safe-Hole
 SUBDIR+=	p5-Storable
 SUBDIR+=	p5-Term-ReadKey
 SUBDIR+=	p5-Test-Cmd
+SUBDIR+=	p5-Tie-IxHash
 SUBDIR+=	p5-Time-HiRes
 SUBDIR+=	p5-TimeDate
 SUBDIR+=	p5-perl-headers
