--- a/math/Makefile
+++ b/math/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.56 2001/03/07 20:58:25 jtb Exp $
+# $NetBSD: Makefile,v 1.57 2001/03/27 12:10:24 wennmach Exp $
 #
 
 COMMENT=	Mathematics
@@ -30,6 +30,7 @@ SUBDIR+=	metis
 SUBDIR+=	minpack
 SUBDIR+=	ntl
 SUBDIR+=	octave
+SUBDIR+=	octave-current
 SUBDIR+=	odepack
 SUBDIR+=	otter
 SUBDIR+=	pari
