--- a/print/acroread3/Makefile
+++ b/print/acroread3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2001/02/25 04:18:11 hubertf Exp $
+# $NetBSD: Makefile,v 1.17 2001/03/27 18:03:27 dmcmahill Exp $
 
 PKGNAME=	acroread3-3.01
 CATEGORIES=	print
@@ -8,7 +8,6 @@ MAINTAINER=	packages@netbsd.org
 HOMEPAGE=	http://www.adobe.com/prodindex/acrobat/readstep.html
 COMMENT=	View, distribute and print PDF documents
 
-IS_INTERACTIVE=	YES
 RESTRICTED=	"Original installer required to redistribute."
 NO_SRC_ON_CDROM=	${RESTRICTED}
 NO_BIN_ON_CDROM=	${RESTRICTED}
