--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.211 2001/03/26 07:10:39 fredb Exp $
+# $NetBSD: Makefile,v 1.212 2001/03/27 23:18:59 wiz Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -12,7 +12,6 @@ SUBDIR+=	XmHTML
 SUBDIR+=	aterm
 SUBDIR+=	blt
 SUBDIR+=	controlcenter
-SUBDIR+=	crxvt
 SUBDIR+=	dxpc
 SUBDIR+=	ebuilder
 SUBDIR+=	egtk
