--- a/textproc/yodl/Makefile
+++ b/textproc/yodl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/26 22:43:57 jtb Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/28 01:19:03 jtb Exp $
 
 DISTNAME=	yodl-1.31.18
 CATEGORIES=	textproc
@@ -6,7 +6,7 @@ MASTER_SITES=	ftp://ftp.lilypond.org/pub/yodl/development/
 
 MAINTAINER=	jtb@netbsd.org
 HOMEPAGE=	http://www.xs4all.nl/~jantien/yodl/
-COMMENT=	high-level document document preparation system
+COMMENT=	high-level document preparation system
 
 GNU_CONFIGURE=	YES
 USE_GMAKE=	YES
