--- a/www/cocoon/Makefile
+++ b/www/cocoon/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2001/03/14 02:05:20 jwise Exp $
+# $NetBSD: Makefile,v 1.9 2001/03/28 03:57:32 jwise Exp $
 
 DISTNAME=	Cocoon-1.8.2
 PKGNAME=	cocoon-1.8.2
@@ -15,7 +15,7 @@ COMMENT=	the Apache Project's XML/XSL based web publishing system
 # imported as -current packages.
 DEPENDS+=	xalan-j-1.2:../../textproc/xalan-j
 DEPENDS+=	fop-0.15.0:../../textproc/fop
-DEPENDS+=	jakarta-tomcat-*:../../www/jakarta-tomcat
+DEPENDS+=	jakarta-servletapi-*:../../www/jakarta-servletapi
 
 # In addition to the above requirements, cocoon will build in support for the
 # following if they are in ${CLASSPATH}
@@ -69,4 +69,4 @@ do-install:
 
 .include "../../mk/bsd.pkg.mk"
 
-CLASSPATH:=${CLASSPATH}:${LOCALBASE}/lib/java/fop.jar:${LOCALBASE}/lib/java/xalan.jar:${LOCALBASE}/lib/java/bsf.jar:${LOCALBASE}/lib/java/xerces.jar:${LOCALBASE}/jakarta/tomcat/lib/servlet.jar
+CLASSPATH:=${CLASSPATH}:${LOCALBASE}/lib/java/fop.jar:${LOCALBASE}/lib/java/xalan.jar:${LOCALBASE}/lib/java/bsf.jar:${LOCALBASE}/lib/java/xerces.jar:${LOCALBASE}/lib/java/servlet.jar
