--- a/devel/kdebindings2/Makefile
+++ b/devel/kdebindings2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2001/03/22 13:21:37 skrll Exp $
+# $NetBSD: Makefile,v 1.3 2001/03/28 07:50:34 skrll Exp $
 #
 
 DISTNAME=		kdebindings-2.1
@@ -6,6 +6,7 @@ CATEGORIES=		devel kde
 .include "../../x11/kde2/Makefile.part1"
 COMMENT=		Additional language bindings for KDE integrated X11 desktop
 
+DEPENDS+=		kdebase-2.1:../../x11/kdebase2
 DEPENDS+=		gtk+-1.2.9:../../x11/gtk
 DEPENDS+=		python-2.0:../../lang/python
 
