--- a/games/quake3arena-demo/Makefile
+++ b/games/quake3arena-demo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2001/02/16 15:10:57 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2001/03/28 10:28:28 wiz Exp $
 #
 
 DISTNAME=	linuxq3ademo-1_11-6_x86_gz
@@ -49,6 +49,10 @@ do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/bin/x86/glibc-2.1/q3ded ${LIBDIR}
 	${INSTALL_DATA} ${WRKSRC}/bin/x86/glibc-2.1/libMesaVoodooGL.so.3.2 \
 		${LIBDIR}
+	${LN} -s ${LIBDIR}/libMesaVoodooGL.so.3.2 \
+		${LIBDIR}/libMesaVoodooGL.so.3
+	${LN} -s ${LIBDIR}/libMesaVoodooGL.so.3.2 \
+		${LIBDIR}/libMesaVoodooGL.so
 	${INSTALL_DATA} ${WRKSRC}/README ${SHAREDIR}/${BINNAME}-README
 	cd ${WRKSRC} ; ${PAX} -rw demoq3 icon.bmp icon.xpm ${LIBDIR}
 	cd ${WRKSRC} ; ${PAX} -rw Help ${SHAREDIR}
