--- a/time/devtodo/Makefile
+++ b/time/devtodo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/20 21:45:55 mjl Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/28 11:02:43 abs Exp $
 #
 
 DISTNAME=	devtodo-0.1.3
@@ -8,6 +8,8 @@ MASTER_SITES=	http://ftp1.sourceforge.net/devtodo/
 MAINTAINER=	packages@netbsd.org
 HOMEPAGE=	http://sourceforge.net/projects/devtodo/
 COMMENT=	Display and manage a list of items that are outstanding
+
+DEPENDS+=	readline-[0-9]*:../../devel/readline
 
 GNU_CONFIGURE=	yes
 MAKE_ENV+=	CXXFLAGS=-Wl,-R${PREFIX}/lib
