--- a/graphics/xpdf/Makefile
+++ b/graphics/xpdf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2001/02/16 15:22:36 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2001/03/28 11:26:09 drochner Exp $
 # FreeBSD Id: Makefile,v 1.12 1998/03/11 03:08:12 vanilla Exp
 # 
 
@@ -14,7 +14,7 @@ COMMENT=	Display tool for PDF files
 
 DEPENDS+=	freetype-lib-1.3.1:../../graphics/freetype
 DEPENDS+=	ghostscript-fonts-*:../../print/ghostscript-fonts
-DEPENDS+=	t1lib-1.0.1:../../textproc/t1lib
+DEPENDS+=	t1lib>=1.0.1:../../textproc/t1lib
 
 CONFLICTS=	xpdf-crypto-*
 
